--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,64 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="../starter-code/css/main.css">
+  <link href="../starter-code/HelveticaNeue-Black.woff" rel="stylesheet">
+
 </head>
 <body>
-  Instagram
+  <div class="container">
+    <div class="header">
+  
+    </div>
+    <div class="content">
+      <div class="content-box-phones">
+      </div>
+      <div class="content-box">
+        <div class="icons">
+          <div class="icons-logo">
+          </div>
+          <div class="icons-button">
+            <div class="button">
+              <button><img src="../starter-code/images/home.png" alt="log-in"> Log in</button> 
+            </div>
+          </div>
+        </div>
+        <div class="box-text">
+          <div class="text">
+            <h1>Capture and Share the World's Moments</h1>
+            <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <div class="download-icons">
+              <div class="down-icon">
+                <img src="../starter-code/images/badge-iphone.png" alt="badge iphone">                
+              </div>
+              <div class="down-icon">
+                <img src="../starter-code/images/badge-android.png" alt="badge android">                
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="clearfix">
+    </div>
+    <div class="footer">
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li class="footer-copy">&copy; 2014 Instagram</p><li>
+        </ul>
+    </div>
+  </div>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  
 </body>
 </html>
