--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -21,7 +21,7 @@
     <img class="phones" src="./images/phones.png" alt="phones">
 
     <img class="logo" src="./images/brand.png" alt="instagram">
-    <button class="btn" type="submit"><img src="./images/home.png"> Log In</button>
+    <button class="btn" type="submit"><img src="./images/home.png"><div id= "login">Log In</div></button>
     
 
   </header>
@@ -41,7 +41,8 @@
   <p>Oh yeah, did we mention it's free?</p>
 
   <img src="./images/badge-iphone.png" alt="iphone">
-  <img src="./images/badge-iphone.png" alt="android">
+  <img src="./images/badge-android.png" alt="android">
+
 
 </div>
 
