--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,20 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <div class="wrap">
+    <div class="container">
 
-  Capture and Share the World's Moments
+      <div class="right">
+        <div class="header">
+          <img src="./images/brand.png" alt="">
+          <a id="sign-in" href="#"><img src="./images/home.png" alt="home">Sign in</a>
+        </div>
+        <div class="info">
+          <h3>Capture and Share the World's Moments</h3>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          <p>Instagram is a <strong>fast</strong>, <strong>beautifull</strong> and <strong>fun</strong> way to share
+            your life with friends and family.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+            it's that
+            easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Oh yeah, did we mention it's free?
+          <p>Oh yeah, did we mention it's free?</p>
 
-  Download on the App Store
+          <a id="google-play" href="www.google.com"></a>
+          <a id="apple" href="www.apple.com"></a>
+        </div>
+      </div>
+    </div>
+
+    <footer>
+      <div class="footer-container">
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li>&copy; 2019 Instagram</li>
+        </ul>
+      </div>
+    </footer>
+  </div>
+
+
+
+
+  <!-- Download on the App Store
   Get it on Google Play
 
   About Us
@@ -26,6 +65,7 @@
   Privacy
   Terms
 
-  &copy; 2014 Instagram
+  &copy; 2014 Instagram -->
 </body>
+
 </html>
