--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <main>
+  <div class="contPrincipal">
+    <div class="fotoInst">
+      <img src="images/phones.png" alt="phone">
+    </div>
+    <div class="contText">
+      <div class="header">
+        <div class="imgLogo">
+          <img src="images/brand.png" alt="logo instagram">
+        </div>
+        <div class="login">
+          <a class="boton-login" href="#"><img src="images/home.png" alt="log in">Log in</a>
+        </div>
 
-  Capture and Share the World's Moments
+      </div>
+      <div class="descripcio">
+        <div class="textDescripcio">
+          <h1>Capture and Share <br>the World's Moments</h1>
+          <p>
+              Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with friends and family.<br>
+            
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+            
+              Oh yeah, did we mention it's free?
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          </p>
+        </div>
+        <div class="logosDownl">
+          <img src="images/badge-iphone.png" alt="button ios">
+          <img src="images/badge-android.png" alt="button android">
+        </div>
+      </div>
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  </div>
+  </main>
+  <footer>
+      <span>About Us</span>
+      <span>Support</span>
+      <span>Blog</span>
+      <span>Press</span>
+      <span>API</span>
+      <span>Jobs</span>
+      <span>Privacy</span>
+      <span>Terms</span>
+      &copy; 2014 Instagram 
+  </footer>
 </body>
 </html>
