--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,46 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <section class="container">
+    <img src="images/phones.png" alt ="img-phones">
+  </section>
+  <section class="container-right">
+    <div>
+      <div class="container-logo">
+        <img src="images/brand.png" alt ="logo-instagram">
+        <button class="home-button"><img src="images/home.png" alt="home">   Log in</button>
+      </div>
+    </div>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <div class="text-container">
+      <h2>Capture and Share the World's Moments</h2>
+      <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+    </div>
+    <div>
+      <div>
+        <img class="image" src="images/badge-iphone.png" alt="app-store">
+        <img class="image" src="images/badge-android.png" alt="Google-Play">
+      </div>
+    </div>
+  
+</section>
+<footer>
+  <ul>
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li class="li-color">&copy; 2014 Instagram</li>
+  </ul>
+</footer>
 </body>
 </html>
