--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,53 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="blue"></div>
+    <div class="container">
+      <img class="big float" src="images/phones.png">
+      <div class="content float">
+        <header>
+          <img class="float" src="images/brand.png">
+          <div class="login">
+            <img src="images/home.png">
+            <a>Log in</a>
+          </div>
+          <div class="clearfix"></div>
+        </header>
+        
+        <main>
+        <h2>Capture and Share the World's Moments</h2>
 
-  Capture and Share the World's Moments
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>Oh yeah, did we mention it's free?</p>
 
-  Oh yeah, did we mention it's free?
+        <img src="images/badge-iphone.png">
+        <img src="images/badge-android.png">
 
-  Download on the App Store
-  Get it on Google Play
+        </main>
+      </div>
+      <div class="clearfix"></div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+      <footer>
+        <nav class="footer-menu">
+          <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+          </ul>
+        </nav>
+      <span class="copyright">&copy; 2014 Instagram</span>
+      </footer>
+    </div>
 </body>
 </html>
