--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="all">
+    <div class="bg-section"></div>
+    <div class="container">
+      <main>  
+          <div class="img-phones">
+            <img src="./images/phones.png" alt="Phones">
+          </div>
+          <section class="content">
+            <header>
+              <img class="brand" src="./images/brand.png" alt="Instagram">
+              <a class="button" href="#">
+                <img src="./images/home.png" alt="Home">
+                <span>Log in</span>
+              </a>
+              <div class="clearfix"></div>
+            </header>
+            <article class="description">
+              <h2>Capture and Share the World's Moments</h2>
+              <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+              <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+              <p>Oh yeah, did we mention it's free?</p>
+              <div>
+                <img class="download-app" src="./images/badge-iphone.png" alt="Download on the App Store">
+                <img class="download-app" src="./images/badge-android.png" alt="Get it on Google Play">
+              </div>
+            </article>
+          </section>
+          <div class="clearfix"></div>
+      </main>
+      <footer>
+        <nav>
+          <ul>
+            <li class="link-footer"><a href="#">About Us</a></li>
+            <li class="link-footer"><a href="#">Support</a></li>
+            <li class="link-footer"><a href="#">Blog</a></li>
+            <li class="link-footer"><a href="#">Press</a></li>
+            <li class="link-footer"><a href="#">API</a></li>
+            <li class="link-footer"><a href="#">Jobs</a></li>
+            <li class="link-footer"><a href="#">Privacy</a></li>
+            <li class="link-footer"><a href="#">Terms</a></li>
+            <li class="link-footer">&copy; 2014 Instagram</li>
+          </ul>
+        </nav>
+      </footer>
+    </div>
+  </div>
 </body>
 </html>
