--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <header class="background"></header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <main class="main-content">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <section class="mobile">
 
-  Oh yeah, did we mention it's free?
+      <figure>
+        <img src="images/phones.png" alt="mobile phones">
+      </figure>
 
-  Download on the App Store
-  Get it on Google Play
+    </section>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    <section class="wrapper">
 
-  &copy; 2014 Instagram
+      <header class="header-label">  
+        <figure>
+          <img src="images/brand.png" alt="brand logo">
+        </figure>
+
+        <div class="log-in">
+          <img src="images/home.png" alt="go to home">
+          <a href="#">Log in</a>
+        </div>
+      </header>
+
+      <div class="clearfix"></div>
+
+      <section class="white-background">
+        <header>
+          <h1>Capture and Share the World's Moments</h1>
+        </header>
+
+        <article class="paragraphs">
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+
+          <p> Take a picture or video, choose a filter to transform its look and feel, 
+              then post to Instagram &mdash; it's that easy. 
+              You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+    
+          <p>Oh yeah, did we mention it's free?</p>
+        </article>
+
+        <figure class="left-float">
+          <img src="images/badge-iphone.png" alt="badge iphone">
+        </figure>
+
+        <figure class="left-float">
+          <img src="images/badge-android.png" alt="badge android">
+        </figure>
+
+      </section>
+
+    </section>
+    
+    <div class="clearfix"></div>
+
+    <footer>
+
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+      </ul>
+
+      <p>&copy; 2014 Instagram</p>
+
+    </footer>
+
+  </main>
+
 </body>
 </html>
