--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,52 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <section class="phone-image">
+    <img src="images/phones.png">
+  </section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <section class="instagram-logo">
+    <img src="images/brand.png" alt="Instagram">
+  </section>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <section class="login-button">
+    <img src="images/home.png"> Log In
+  </section>
 
-  Oh yeah, did we mention it's free?
+  <section class="frame">
+    <h2>Capture and Share </h2>
+    <h2>the World's Moments</h2>
+    Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  
+    Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  
+    Oh yeah, did we mention it's free?
+  </section>
 
-  Download on the App Store
-  Get it on Google Play
+  <section class="download-logos">
+    <img src="images/badge-iphone.png" alt="Download on the App Store">
+    <img src="images/badge-android.png" alt="Get it on Google Play">
+  </section>
+  <div class="clearfix"></div>
+ 
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+    </ul>
+  </footer>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div id="copyright">&copy; 2014 Instagram
+  </div>
 </body>
 </html>
