Complete most styles

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -12,7 +12,6 @@
         <header>
           <img class="float" src="images/brand.png">
           <div class="login">
-            <img src="images/home.png">
             <a>Log in</a>
           </div>
           <div class="clearfix"></div>
@@ -34,21 +33,24 @@
       </div>
       <div class="clearfix"></div>
 
-      <footer>
-        <nav class="footer-menu">
-          <ul>
-      <li>About Us</li>
-      <li>Support</li>
-      <li>Blog</li>
-      <li>Press</li>
-      <li>API</li>
-      <li>Jobs</li>
-      <li>Privacy</li>
-      <li>Terms</li>
-          </ul>
-        </nav>
-      <span class="copyright">&copy; 2014 Instagram</span>
-      </footer>
+        <footer>
+          <div class="footer-container">
+            <nav class="footer-menu">
+              <ul>
+                <li>About Us</li>
+                <li>Support</li>
+                <li>Blog</li>
+                <li>Press</li>
+                <li>API</li>
+                <li>Jobs</li>
+                <li>Privacy</li>
+                <li>Terms</li>
+              </ul>
+            </nav>
+            <span class="copyright">&copy; 2014 Instagram</span>
+            <div class="clearfix"></div>
+          </div>
+        </footer>
     </div>
 </body>
 </html>
