--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <main> 
+  <div class="top">
+    <div class="logo">
+      <img src="images/brand.png" alt="logo">
+    </div>
+    <div class="log">
+      <img src="images/home.png" alt="login">
+      <a href="#">Log in</a>
+    </div>  
+  </div>  
+    <img class="phone" src="images/phones.png" alt="logo">
+  <div class="cont">  
+    <h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
+    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <p>Oh yeah, did we mention it's free?</p>
+  </div>
+  <div class="images">
+    <a href="#"><img class="app" src="images/badge-iphone.png" alt="app store"></a>
+    <a href="#"><img class="goog" src="images/badge-android.png" alt="google play"></a>
+  </div>  
+  </main>
+  <footer>
+    <div class="foot">
+      About Us
+      Support
+      Blog
+      Press
+      API
+      Jobs
+      Privacy
+      Terms
+    </div>  
+    <div class="cr">
+      &copy; 2014 Instagram
+    </div>
+  </footer>
 </body>
 </html>
