--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,44 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="container">
+    <div class="header">
+      <img src="images/brand.png">
+      <button type="button"><img src="images/home.png">Log in</button>
+    </div>
+    <img class="phones" src="images/phones.png">
 
-  Capture and Share the World's Moments
+    <div class="paragraph">
+      <h2>Capture and Share the World's Moments</h2>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+      Oh yeah, did we mention it's free?</p>
 
-  Download on the App Store
-  Get it on Google Play
+      <a href="#"><img src="images/badge-iphone.png" alt=""></a> 
+      <a href="#"><img src="images/badge-android.png" alt=""></a> 
+    </div>
+  </div>
+    <div class="clearfix"></div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="footer">
+  
+          <a href="#">About us</a>
+          <a href="#">Support</a>
+          <a href="#">Blog</a>
+          <a href="#">Press</a>
+          <a href="#">API</a>
+          <a href="#">Jobs</a>
+          <a href="#">Privacy</a>
+          <a href="#">Terms</a>
+    <div class="copyright">
+     &copy; 2014 Instagram
+    </div>
+  </div>
 </body>
 </html>
