--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Instagram</title>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+    <header>
+    </header>
+    <main>
+        <section>
+            <article>
+                <img src="images/phones.png" alt="phones" class="image-phone">
+            </article>
+        </section>
+        <section>
+            <article class="content">
+                <div class="logo">
+                    <img src="images/brand.png" width="200px" alt="brand">
+                </div>
+                <a href="#"><img src="images/home.png" alt="home">Log in</a>
+                <div>
+                    <h2>Capture and Share the World's Moments</h2>
+                    <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+                    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+                    <p>Oh yeah, did we mention it's free?</p>
+                    <img src="images/badge-iphone.png" alt="badge-iphone app store" width="140px">
+                    <img src="images/badge-android.png" alt="badge-android google play" width="140px">
+                </div>
 
-  Capture and Share the World's Moments
+            </article>
+        </section>
+        <div class="clearfix"></div>
+        <footer>
+            <ul>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Support</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Press</a></li>
+                <li><a href="#">API</a></li>
+                <li><a href="#">Jobs</a></li>
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Terms</a></li>
+                <li>&copy; 2014 Instagram</li>
+            </ul>
+        </footer>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    </main>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
+
 </html>
