estructura y primeros estilos

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <meta name="description" content="red social de la mas utilizadas en el mundo">
+  <meta charset=" UTF-8">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
+  <meta name="robots" content="index,follow">
 </head>
+
 <body>
-  Instagram
+  <main class="container"> 
+    <figure class="iphone">
+      <img src="images/phones.png" alt="">
+    </figure>
 
-  Capture and Share the World's Moments
+    <section class="box">
+      <header>
+        <figure class="logo">
+          <img src="images/brand.png" alt="">
+        </figure>
+        <figure class="boton">
+          <img src="images/home.png" alt="">
+          <p>Log in</p>
+        </figure>
+      </header>
+      <main class="info">
+        <h2>
+          Capture and Share the World's Moments
+        </h2>
+        <p> Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that
+          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p> Oh yeah, did we mention it's free?</p>
+        <figure>
+          <img src="" alt="">
+        </figure>
+        <figure>
+          <img src="" alt="">
+        </figure>
+      </main>
+    </section>
+  </main>
+  <footer>
+    <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+    </ul>
+  
+  </footer>
+  <div class="clearfix"></div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+  <!-- <main>
+    <header>
+      <div>
+        <figure>
+          <img class="iphone" src="images/phones.png" alt="">
+        </figure>
+        <figure>
+          <img src="images/brand.png" alt="">
+        </figure>
+        <figure>
+          <img src="images/phones.png" alt="">
+        </figure>
+        <figure>
+          <img src="images/phones.png" alt="">
+        </figure>
+      </div>
 
-  Download on the App Store
-  Get it on Google Play
+      <section>
+        Capture and Share the World's Moments
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  &copy; 2014 Instagram
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+        that
+        easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+
+        Oh yeah, did we mention it's free?
+      </section>
+    </header>
+    <section>
+      Download on the App Store
+      Get it on Google Play
+    </section>
+    <footer>
+      About Us
+      Support
+      Blog
+      Press
+      API
+      Jobs
+      Privacy
+      Terms
+
+      &copy; 2014 Instagram
+    </footer>
+  </main> -->
 </body>
+
 </html>
