--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css" />
 </head>
+
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div id="main-frame">
+    <div id="right-frame">
+      <div class="header">
+        <img src="images/brand.png" alt="instagram logo" />
+        <a class="log-button" href="#"><img src="./images/home.png" alt="home">Log in</a>
+      </div>
+      <section id="main-content">
+        <article class="article">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>
+            Capture and Share the World's Moments Instagram is a <strong>fast, beautiful</strong>
+            and <strong>fun</strong> way to share your life with friends and family.</p>
+          <p> Take a picture
+            or video, choose a filter to transform its look and feel, then post to
+            Instagram &mdash; it's that easy. You can even share to Facebook,
+            Twitter, Tumblr and more. It's a new way to see the world. </p>
+          <p> Oh yeah,
+            did we mention it's free?
+          </p>
+        </article>
+        <div class="icons">
+          <a id="icon-store" target="_blank" href="https://itunes.apple.com/app/instagram/id389801252?mt=8&vt=lo">
+          </a>
+          <a id="icon-play" target="_blank" href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DrootLandingPage%26ig_mid%3Dhjl4uw1txm1kn48os8mknzjudmqh2ifuq6orr1gkhzqp18kzr00%26utm_content%3Dlo%26utm_medium%3Dbadge">
+          </a>
+        </div>
+      </section>
+    </div>
+  </div>
+  <footer id="footer">
+    <div class="container">
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </div>
+  </footer>
 </body>
+
 </html>
