--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,28 +4,42 @@
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <section class="phones">
+    <div >
+      <img src="images/phones.png" alt="phones" >
+    </div>
+  </section>
+  <section class="brand-text">
+    <img src="images/brand.png" alt="brand">
+    <img src="images/home.png" alt="home">
+    <article>
+      <h2>Instagram</h2>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <p>Capture and Share the World's Moments Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong>  way to share your life </p> 
+      <p>with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        Oh yeah, did we mention it's free?</p>
+    </article>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    
+    <button name="button" ><img src="images/badge-iphone.png" alt="Submit"></button>
+    <button name="button"><img src="images/badge-android.png" alt="Submit"></button>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  </section>
+  
 </body>
+<footer>
+    <ul >
+       <a href="https://www.instagram.com/about/us/">About Us</a> 
+       <a href="">Support</a>
+       <a href="">Blog</a>
+       <a href="">Press</a>
+       <a href="">API/a>
+       <a href="">Jobs</a>
+       <a href="">Privacy</a>
+       <a href="">Terms </a>
+       <a id="grayed" href="">&copy; 2014 Instagram</a>
+      </ul>
+</footer>
 </html>
