Segundos cambios, errores con maquetación

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,21 +2,48 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  <div class="blue"></div>
 
-  Capture and Share the World's Moments
+  <section>
+    <div class="box-iphone">
+      <img src="images/phones.png" alt="">
+    </div>
+    
+    <div class="box-content">
+      <header>
+        <img src="images/brand.png" alt="Instagram">
+        
+        <div class="button">
+        <img src="images/home.png" alt="home">
+        <a href="#">Log in</a>
+        </div>
+      </header>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <div class="content"></div>
+  <h2>Capture and Share the World's Moments</h2>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
+  <p>Oh yeah, did we mention it's free?</p>
 
+    <div class="appmarket-wraper">
+      <img src="images/badge-android.png" alt="Download on the Google Play">
+      <img src="images/badge-iphone.png" alt="Download on the App Store">
+    </div>
+  </div>
+  </section>
+
+  <div class="clearfix"></div>
+  
+
+<nav>
   About Us
   Support
   Blog
@@ -25,7 +52,8 @@
   Jobs
   Privacy
   Terms
+</nav>
 
   &copy; 2014 Instagram
 </body>
-</html>
+</html> 
