--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Instagram</title>
+    <title>Instagram</title>
+    <link href="./css/main.css" rel="stylesheet">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+    <section>
+        <div class="contenido">
+            <div id="phones">
+                <img src="../starter-code/images/phones.png" alt="">
+            </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+            <div class="content">
+                <img src="../starter-code/images/brand.png" alt="">
+                <a id="login" href="#"><img src="../starter-code/images/home.png" alt="home">Log in</a>
+            </div>
+            <div class="content backgrimage">
+                <div>
+                    <h2 id="title"> Capture and Share <br>the World's Moments</h2>
+                </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+                <div class="text">
+                    <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br><br>Take a picture or video, choose a filter to transform its look and feel, then post to
+                        Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br><br>Oh yeah, did we mention it's free?</p>
+                </div>
+                <div class="paddingtop">
+                    <a href="#"><img src="../starter-code/images/badge-android.png" alt="Android Button"></a>
+                    <a href=""><img src="../starter-code/images/badge-iphone.png" alt="Iphone Button"></a>
+                </div>
+            </div>
+            <div class="both"></div>
+    </section>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <footer class="paddingtop">
+        <a href="">PLAY</a>
+        <a href="">ABOUT</a>
+        <a href="">US</a>
+        <a href="">SUPPORT</a>
+        <a href="">BLOG</a>
+        <a href="">PRESS</a>
+        <a href="">API</a>
+        <a href="">JOBS</a>
+        <a href="">PRIVACY</a>
+        <a href="">TERMS</a>
+        <p id="copy">&copy; 2014 Instagram</p>
+    </footer>
 </body>
+
 </html>
