--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,55 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+<header>
+  <div class="head-containter">
+      <div id="inst-logo" >
+          <img src="images/brand.png" alt="logo">
+      </div>
+      <div>
+      <button id="home-btn"><img src="images/home.png" alt="login">Log In</button>
+      </div>
+  </div>
+</header>
 
-  Capture and Share the World's Moments
+<main>
+  <div class="main-container">
+    <div class="iphone">
+      <img src="images/phones.png" alt="">
+    </div>
+    <div class="main-description">
+      <h2>Capture and Share the World's Moments</h2>
+      <p>Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+          Oh yeah, did we mention it's free?</p>
+        <img src="images/badge-iphone.png" alt="apple">
+        <img src="images/badge-android.png" alt="android">
+    </div>
+    </div>
+</main>
 
-  Download on the App Store
-  Get it on Google Play
+<footer>
+  <div class="footer-list">
+    <ul id="foot-ul">
+      <li><a href="#"></a>About us</li>
+      <li><a href="#"></a>Support</li>
+      <li><a href="#"></a>Blog</li>
+      <li><a href="#"></a>Press</li>
+      <li><a href="#"></a>API</li>
+      <li><a href="#"></a>Jobs</li>
+      <li><a href="#"></a>Privacy</li>
+      <li><a href="#"></a>Terms</li>
+    </ul>
+  </div>
+</footer>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  
 </body>
 </html>
