--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+
 <body>
-  Instagram
+  <header class="header">
+    <img src="images/brand.png" alt="logo instagram" class="logo">
+    <button type="Log in" class="home-boton"><img src="images/home.png" alt="home-boton">Log in</button>
+  </header>
 
-  Capture and Share the World's Moments
+  <section class="section">
+    <img src="images/phones.png" alt="phones" class="photo-phone">
+    <img src="images/frame.png" alt="frame information" class="frame"> 
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <section class="section2">
+    <h2>Capture and Share the World's Moments</h2>
+    <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
+      easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
+    <p>Oh yeah, did we mention it's free?</p>
+    <img src="images/badge-iphone.png" alt="appStore" class="appStore">
+    <img src="images/badge-android.png" alt="googlePlay" class="googlePlay">
+    </section>  
+  </section>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <section class="section3">
+    <a href="#">About Us</a>
+    <a href="#">Support</a>
+    <a href="#">Blog</a>
+    <a href="#">Press</a>
+    <a href="#">API</a>
+    <a href="#">Jobs</a>
+    <a href="#">Privacy</a>
+    <a href="#">Terms</a>
+    <p>&copy; 2014 Instagram</p>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  </section>
 </body>
+
 </html>
