--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,7 +5,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
 </head>
-
+ 
 <body>
   <div class="blue"></div>
 
@@ -24,23 +24,24 @@
         </div>
       </header>
 
-  <div class="content"></div>
-  <h2>Capture and Share the World's Moments</h2>
+      <div class="content">
+        <h2>Capture and Share the World's Moments</h2>
 
-  <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  <p>Oh yeah, did we mention it's free?</p>
+          <p>Oh yeah, did we mention it's free?</p>
 
-    <div class="appmarket-wraper">
-      <img src="images/badge-android.png" alt="Download on the Google Play">
-      <img src="images/badge-iphone.png" alt="Download on the App Store">
+        <div class="appmarket-wraper">
+          <img src="images/badge-android.png" alt="Download on the Google Play">
+        <img src="images/badge-iphone.png" alt="Download on the App Store">
+        </div>
+      </div>
     </div>
-  </div>
   </section>
 
-  <div class="clearfix"></div>
+<div class="clearfix"></div>
   
 
 <nav>
