--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,50 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-  <title>Instagram</title>
+  <title>Hello, world!</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="instagram.css">
+  <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 </head>
+
+
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+   
+  <header class="header">
+      <nav>
+           <img class="icono-de-instagram" src="brand.png" alt="icono-de-instagram">
+          
+          <button class="button-home">
+              <img class="home" src="home.png" alt="home"> Log in
+          </button>
+      </nav>
+  </header>
+  <aside class="aside"><img src="phones.png" alt="iphone-image"></aside>
+  <section class="section">
+      
+      <h3 class="h3">Capture and Share <br> the World's Moments</h3>
+      <p>Instagram is a fast, beautiful and fun way to share your life <br> with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform <br> its look and feel, then post to Instagram - it's that easy. <br>
+          You can even share to Facebook, Twitter, Tumblr and <br> It's a new way to see the world.
+      </p>
+      <p>Oh yeah, did we mention it's free?</p>
+      <button><img src="badge-iphone.png" alt="descargar-desde-appstore"></button>
+      <button> <img src="badge-android.png" alt="descargar-desde-appstore"></button>
+    </section>
+  <footer class="footer">
+      <p class="p-footer"> 
+      <a class="link" href="#">about us</a>
+      <a class="link" href="#">support</a>
+      <a class="link" href="#">blog</a>
+      <a class="link" href="#">press</a>
+      <a class="link" href="#">api</a>
+      <a class="link" href="#">jobs</a>
+      <a class="link" href="#">privacy</a>
+      <a class="link" href="#">terms</a>
+      2014 instagram
+      </p>
+  </footer>
 </body>
 </html>
