--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">.
 </head>
 <body>
-  Instagram
+  <header id="banner">
+    <div class="title">
+      <img src="images/brand.png">
+      <div class="sign-in">
+        <img src="images/home.png">
+        <p><a href="#">Log in</a></p>        
+      </div>
+    
+    </div>
+  </header>
 
-  Capture and Share the World's Moments
+    <main class="principal">
+      <div class="phones">
+        <img src="images/phones.png">
+      </div>
+      <div class="information">
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.<br><br>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br><br>
+          
+            Oh yeah, did we mention it's free?</p>
+            <a href="#"><img src="images/badge-iphone.png"></a>
+            <a href="#"><img src="images/badge-android.png"></a>
+      </div>
+    </main>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <footer class="footer">
+      <nav class="nav-bar">
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li class="gray">&copy; 2014 Instagram</li>
+        </ul>
+      </nav>
+    </footer>  
 </body>
 </html>
