--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+ <title>Instagram</title>
+ <link rel="stylesheet" type="text/css" href="css/main.css">
+
 </head>
+
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+ <div class="back"></div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+ <div class="container">
+   <div class="image">
+     <img src="images/phones.png" alt="phones-image">
+   </div>
+   <div class="content">
+     <div class="title">
+         <img src="images/brand.png" alt="instagram-logo">
+         <a class="homebutton" href="#"><img src="images/home.png">Log in</a>
+     </div>
+     <div class="textmain">
+         <header>
+             <h1>Capture and Share the World's Moments</h1>
+         </header>
+         <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+         <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+         <p>Oh yeah, did we mention it's free?</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
+         <img src="images/badge-android.png" alt="Download on the AppStore">
+         <img src="images/badge-iphone.png" alt="Get it on Google Play">
+     </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+   </div>
+   <div class="clearfix"></div>
+   <footer>
+       <ul>
+       <li>About Us</li>
+       <li>Blog</li>
+       <li>Press</li>
+       <li>API</li>
+       <li>Jobs</li>
+       <li>Jobs</li>
+       <li>Jobs</li>
+        &copy; 2014 Instagram
+    </ul>
+   </footer>
+
+
+
+
+ </div>
 </body>
 </html>
